# bevy_parents_childs

./: .gitignore  Cargo.toml  README.md
src/: child_builder.rs  hierarchy.rs  lib.rs  query_extension.rs  valid_parent_check_plugin.rs
src/components/: children.rs  mod.rs  parent.rs  parents.rs
